<resources>
    <string name="app_name" translatable="false">Ft_Hangouts</string>
    <string name="contact_name">Contact Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="options">options</string>
    <string name="theme">Theme</string>
    <string name="sayan">Sayan</string>
    <string name="_void">Void</string>
    <string name="sith">Sith</string>
    <string name="create_contact">Create Contact</string>
    <string name="fab">FAB</string>
    <string name="btntocall">btnToCall</string>
    <string name="btntoedit">btnToEdit</string>
    <string name="update_contact">Update contact</string>
    <string name="sms">Write your sms here</string>
    <string name="btntoremove">btntoremove</string>
    <string name="birthday">Birthday</string>
    <string name="info_btn">info_btn</string>
    <string name="back">back</string>
</resources>