<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/setting_menu"
        android:title="@string/options"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="always" >

        <menu>
            <item android:id="@+id/theme"
                android:title="@string/theme">
                <menu>
                    <item android:id="@+id/sayan"
                        android:onClick="changeTheme"
                        android:title="@string/sayan" />
                    <item android:id="@+id/_void"
                        android:onClick="changeTheme"
                        android:title="@string/_void" />
                    <item android:id="@+id/sith"
                        android:onClick="changeTheme"
                        android:title="@string/sith" />
                </menu>
            </item>
        </menu>
    </item>

</menu>