<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ContactCardActivity"    >

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/user_img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"/>

    <ImageButton
        android:id="@+id/call_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_local_phone_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/user_img"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/btntoedit"/>

    <ImageButton
        android:id="@+id/rmv_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/btntoremove"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_delete_forever_24"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/user_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/info_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/info_btn"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_info_24"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/rmv_contact"
        app:layout_constraintStart_toStartOf="@+id/rmv_contact"
        app:layout_constraintTop_toBottomOf="@+id/rmv_contact" />

    <ImageButton
        android:id="@+id/edit_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_mode_edit_outline_24"
        app:layout_constraintEnd_toEndOf="@+id/call_contact"
        app:layout_constraintStart_toStartOf="@+id/call_contact"
        app:layout_constraintTop_toBottomOf="@+id/call_contact"
        android:contentDescription="@string/btntocall" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/contact_card_rec_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/text_sms_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_img" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#EEEEEE"
        app:layout_constraintTop_toBottomOf="@id/contact_card_rec_view" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/text_sms_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:hint="@string/sms"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/send_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_send_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_sms_box"
        app:layout_constraintTop_toTopOf="@+id/text_sms_box" />



</androidx.constraintlayout.widget.ConstraintLayout>